// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the InfoList component with a string array 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="mt-1 text-sm text-gray-600"
      >
        <span
          class="space-y-1"
        >
          <p>
            Hello there
          </p>
        </span>
      </span>
      <span
        class="mt-1 text-sm text-gray-600"
      >
        <span
          class="space-y-1"
        >
          <p>
            this is some mock info
          </p>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="mt-1 text-sm text-gray-600"
    >
      <span
        class="space-y-1"
      >
        <p>
          Hello there
        </p>
      </span>
    </span>
    <span
      class="mt-1 text-sm text-gray-600"
    >
      <span
        class="space-y-1"
      >
        <p>
          this is some mock info
        </p>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the InfoList component with an InfoListItem array 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="mt-1 text-sm text-gray-600 line-clamp-2"
        title=""
      >
        <span
          class="space-y-1"
        >
          <p>
            Hello there
          </p>
        </span>
      </span>
      <span
        class="mt-1 text-sm text-gray-600 line-clamp-2"
        title="this is some mock info but longer"
      >
        <span
          class="space-y-1"
        >
          <p>
            this is some mock info
          </p>
        </span>
      </span>
      <span
        class="mt-1 text-sm text-gray-600 line-clamp-2"
        title=""
      >
        <span
          class="space-y-1"
        >
          <p>
            this is some really long mock info that is so long that it would need to be line clamped
          </p>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="mt-1 text-sm text-gray-600 line-clamp-2"
      title=""
    >
      <span
        class="space-y-1"
      >
        <p>
          Hello there
        </p>
      </span>
    </span>
    <span
      class="mt-1 text-sm text-gray-600 line-clamp-2"
      title="this is some mock info but longer"
    >
      <span
        class="space-y-1"
      >
        <p>
          this is some mock info
        </p>
      </span>
    </span>
    <span
      class="mt-1 text-sm text-gray-600 line-clamp-2"
      title=""
    >
      <span
        class="space-y-1"
      >
        <p>
          this is some really long mock info that is so long that it would need to be line clamped
        </p>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
